# coral-rs

./: Cargo.toml  README.md  api_v1.json  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: publish.yml
examples/: registry.toml
examples/example-agent/: Cargo.toml  coral-agent.toml
examples/example-agent/src/: main.rs
examples/example-options/: Cargo.toml  build.rs  coral-agent.toml
examples/example-options-request/: Cargo.toml
examples/example-options-request/src/: main.rs
examples/example-options/src/: main.rs
src/: agent.rs  agent_loop.rs  api.rs  claim_manager.rs  completion_evaluated_prompt.rs  error.rs  lib.rs  mcp_server.rs  repeating_prompt_stream.rs  telemetry.rs
src/codegen/: __private.rs  mod.rs  options.rs
tests/: agent.rs
