[package]
name = "coral-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.19"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "rt", "macros"] }
tracing = "0.1.41"
rig-core = { version = "0.18.2", features = ["rmcp"] }
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
rmcp = { version = "0.5.0", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
    "auth"
] }
reqwest = "0.12.22"
thiserror = "2.0.12"
progenitor = "0.11.0"
progenitor-client = "0.11.0"
futures = "0.3.31"